Top down/logs/backend_debugger_20251128_230533.log

============================================================
BACKEND DEBUGGER - Starting Project
============================================================
Project path: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend
Port: 5000

[1/2] Starting Flask server...
  Python: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\venv\Scripts\python.exe
  App: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py
  Process started (PID: 26492)
  Waiting for server to start (10 seconds)...
✗ Server failed to start
  stdout: 
  stderr:   File "C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py", line 346
    endpoints_list.append({"method": "PUT", "path": "/api/pos/override", "description": "Override POS System Data"})
IndentationError: unexpected indent


[2/2] Checking for errors...
  ✗ Found indentation in C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py

  Attempting to fix: indentation error in C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py

  Reasoning: **Error Analysis**

1. **Error Type**: The error type is an `IndentationError`, which is a type of syntax error in Python.
2. **Most Likely Cause**: The most likely cause of this error is that there is an **unexpected indentation** on line 346 of the `app.py` file. This means that the line of code i...

  Steps to fix:
  Here are the steps to completely solve the `IndentationError` bug:

1. **FILESYSTEM**: Open the file `app.py` located in the directory `C:\Users\ASUS\Desktop\Codes\POME\Top down\backend`.
2. **MODIFY_FILE**: Go to line 346 in the `app.py` file and check the indentation level of the line `endpoints_list.append({"method": "PUT", "path": "/api/pos/override", "description": "Override POS System Data"}...

  Found 7 steps to execute

  Classifying all steps...

  Classifications:
  STEP 1: FILESYSTEM
STEP 2: MODIFY_FILE
STEP 3: MODIFY_FILE
STEP 4: MODIFY_FILE
STEP 5: MODIFY_FILE
STEP 6: FILESYSTEM
STEP 7: FILESYSTEM...

  Executing step 1/7...
    1. **FILESYSTEM**: Open the file `app.py` located in the directory `C:\Users\ASUS\Desktop\Codes\POME\Top down\backend`.
    Action type: FILESYSTEM
    Command: cd C:\Users\ASUS\Desktop\Codes\POME\Top down\backend & start app.py
    ✓ Command succeeded

  Executing step 2/7...
    2. **MODIFY_FILE**: Go to line 346 in the `app.py` file and check the indentation level of the line `endpoints_list.append({"method": "PUT", "path": "
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 3/7...
    3. **MODIFY_FILE**: If the line is indented and it shouldn't be, remove the unnecessary indentation (spaces or tabs) from the beginning of the line in
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 4/7...
    4. **MODIFY_FILE**: If the line is not indented and it should be (i.e., it's inside a block of code), add the necessary indentation (spaces or tabs) t
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 5/7...
    5. **MODIFY_FILE**: Verify that the corrected line has the same indentation level as the surrounding code in `app.py`.
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 6/7...
    6. **RUN_COMMAND**: Run the Python script `app.py` using a command like `python app.py` in the terminal or command prompt to test if the `IndentationE
    Action type: FILESYSTEM
    Command: python C:\Users\ASUS\Desktop\Codes\POME\Top\down\backend\app.py
    ✗ Command failed: C:\Users\ASUS\AppData\Local\Programs\Python\Python312\python.exe: can't open file 'C:\\Users\\ASUS\\
    Retrying with: python app.py
    ✗ Corrected command also failed:   File "C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py", line 736
    Retrieve user's orde

  Executing step 7/7...
    7. **VERIFY_RESULT**: Check the output of the script to ensure that it runs without any errors, specifically the `IndentationError` that was previousl
    Action type: FILESYSTEM
    Command: python C:\Users\ASUS\Desktop\Codes\POME\Top\down\backend\script.py
    ✗ Command failed: C:\Users\ASUS\AppData\Local\Programs\Python\Python312\python.exe: can't open file 'C:\\Users\\ASUS\\
    Retrying with: python script.py
    ✗ Corrected command also failed: C:\Users\ASUS\AppData\Local\Programs\Python\Python312\python.exe: can't open file 'C:\\Users\\ASUS\\

  ✓ Successfully executed 5/7 steps

============================================================
BACKEND DEBUGGER - Starting Project
============================================================
Project path: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend
Port: 5000

[1/2] Starting Flask server...
  Python: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\venv\Scripts\python.exe
  App: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py
  Process started (PID: 12744)
  Waiting for server to start (10 seconds)...
✗ Server failed to start
  stdout: 
  stderr:   File "C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py", line 736
    Retrieve user's order history with order details
                 ^
SyntaxError: unterminated string literal (detected at line 736)


[2/2] Checking for errors...
  ✗ Found syntax in C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py

  Attempting to fix: syntax error in C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py

  Reasoning: **Error Analysis**

1. **Error Type**: The error type is a `SyntaxError`, which indicates a problem with the syntax of the Python code.
2. **Most Likely Cause**: The most likely cause of this error is an **unterminated string literal**. This occurs when a string is not properly closed with a matchin...

  Steps to fix:
  To completely solve the bug, follow these steps:

1. **MODIFY_FILE**: Open the file `app.py` located in `C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\` in a text editor or IDE.
2. **CHECK_CODE**: Check the code on and around line 736 in `app.py` for an unterminated string literal.
3. **MODIFY_FILE**: Look for a string that is missing a closing quote or has mismatched quotes on and around line...

  Found 10 steps to execute

  Classifying all steps...

  Classifications:
  STEP 1: MODIFY_FILE
STEP 2: MODIFY_FILE
STEP 3: MODIFY_FILE
STEP 4: MODIFY_FILE
STEP 5: MODIFY_FILE
STEP 6: FILESYSTEM
STEP 7: MODIFY_FILE
STEP 8: FILESYSTEM
STEP 9: FILESYSTEM
STEP 10: FILESYSTEM...

  Executing step 1/10...
    1. **MODIFY_FILE**: Open the file `app.py` located in `C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\` in a text editor or IDE.
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 2/10...
    2. **CHECK_CODE**: Check the code on and around line 736 in `app.py` for an unterminated string literal.
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 3/10...
    3. **MODIFY_FILE**: Look for a string that is missing a closing quote or has mismatched quotes on and around line 736 in `app.py`. For example, if you
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 4/10...
    4. **MODIFY_FILE**: Verify that all multiline strings in `app.py` are properly formatted and closed.
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 5/10...
    5. **MODIFY_FILE**: Check that all quotes in `app.py` are properly matched and closed.
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 6/10...
    6. **RUN_LINTER**: Run a linter or syntax checker on `app.py` to help identify any other syntax errors.
    Action type: FILESYSTEM
    Command: pylint C:\Users\ASUS\Desktop\Codes\POME\Top\down\backend\app.py
    ✗ Command failed: 'pylint' is not recognized as an internal or external command,
operable program or batch file.

    Retrying with: python -m pylint C:\Users\ASUS\Desktop\Codes\POME\Top\down\backend\app.py
    ✗ Corrected command also failed: C:\Users\ASUS\Desktop\Codes\POME\Top down\myenv\Scripts\python.exe: No module named pylint


  Executing step 7/10...
    7. **SAVE_FILE**: Save the changes made to `app.py`.
    Action type: MODIFY_FILE
    Target file: app.py
    ✓ Modified app.py (50 lines)

  Executing step 8/10...
    8. **RUN_APPLICATION**: Run the application again to verify that the `SyntaxError` has been resolved.
    Action type: FILESYSTEM
    Command: python manage.py runserver
    ✗ Command failed: C:\Users\ASUS\AppData\Local\Programs\Python\Python312\python.exe: can't open file 'C:\\Users\\ASUS\\
    Retrying with: python .\manage.py runserver
    ✗ Corrected command also failed: C:\Users\ASUS\AppData\Local\Programs\Python\Python312\python.exe: can't open file 'C:\\Users\\ASUS\\

  Executing step 9/10...
    9. **VERIFY_LOGS**: Check the application logs for any other errors that may have been caused by the unterminated string literal.
    Action type: FILESYSTEM
    Command: cd C:\Users\ASUS\Desktop\Codes\POME\Top\ down\backend && npm run logs || python -m http.server | findstr /r "error"
    ✗ Failed to execute: Command 'cd C:\Users\ASUS\Desktop\Codes\POME\Top\ down\backend && npm run logs || python -m http.server | findstr /r "error"' timed out after 120 seconds

  Executing step 10/10...
    10. **TEST_APPLICATION**: Test the application thoroughly to ensure that it is working as expected after the fix.
    Action type: FILESYSTEM
